# inf236-project

./: .gitignore  CMakeLists.txt  README.md  a.out  mandelbrot.cpp  mandelbrot.h  mandelbrot_par.cpp  mandelbrot_seq.cpp  mergesort.c  pmergesort.c  presentation.tex  report.tex  sync.sh
manne/: ._README  README  blockOddEven.c  mandel.c  merge.c  oddeven.c  p1selection.c  pmerge.c  pselection.c  selection.c
